utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/IncludeExcludedModule3.ide
package invalid

typedef module IncludeExcludedModule3 {

}
